# Synapse-Model

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.txt  README.md  READY.md  START.md  check.sh  deploy.sh  dmc.txt  message.txt  test-tee.sh
backend/: .env.example  .gitignore  README.md  main.py  package.json  requirements.txt  start.sh
backend/scripts/: start.sh
backend/src/: index.ts  worker.ts
contracts/: .gitignore  Move.toml  README.md  TESTING.md
contracts/sources/: enclave_registry.move  job_record.move  model_registry.move  trust_certificate.move  utils.move
contracts/tests/: enclave_registry_tests.move  model_registry_tests.move  trust_certificate_tests.move
frontend/: .env.example  CLAUDE.md  README.md  index.html  next.config.js  package.json  start.sh  tailwind.config.js
frontend/components/: Bounties.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  ModelCard.tsx  ModelModal.tsx  Navbar.tsx  UploadForm.tsx  VideoEmbed.tsx  (+2 more)
scripts/: create-enclave-config.sh  deploy-contracts.sh
tee-server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Containerfile  Makefile  README.md  start.sh
tee-server/configs/: enclave_config.yaml
tee-server/models/: README.md
tee-server/scripts/: build.sh  extract_pcrs.sh  run.sh
tee-server/src/: lib.rs  main.rs
tee-server/src/apps/synapsemodel/: endpoints.rs  inference.rs  mod.rs  types.rs
tee-server/src/common/: attestation.rs  mod.rs  signing.rs  types.rs
tee-server/src/models/: mod.rs  model_loader.rs  onnx_runtime.rs
tee-server/tests/: integration_test.rs
(+53 files in other folders)
